backends/candle/tests/snapshots/test_flash_pplx1__pplx1_bf16_single.snap
---
source: backends/candle/tests/test_flash_pplx1.rs
expression: embeddings_single
---
- - -68
  - -31
  - -0
  - 59
  - -28
  - 84
  - -14
  - 23
  - -78
  - -30
  - 37
  - -78
  - 66
  - -0
  - -30
  - -52
  - -83
  - 30
  - -21
  - -37
  - -77
  - -46
  - -9
  - -8
  - -98
  - -17
  - 60
  - -105
  - -3
  - -71
  - 7
  - 18
  - -97
  - 47
  - -57
  - -0
  - -12
  - 68
  - -16
  - 83
  - 60
  - -27
  - 13
  - -12
  - -52
  - -22
  - 62
  - -20
  - 25
  - -29
  - -66
  - -63
  - -29
  - 57
  - 14
  - 92
  - -34
  - 50
  - -58
  - 26
  - -71
  - -71
  - -82
  - 47
  - -30
  - -2
  - 23
  - -46
  - 68
  - -68
  - 3
  - 79
  - -26
  - 1
  - 57
  - 32
  - -12
  - -39
  - -50
  - 5
  - -11
  - -0
  - -2
  - 51
  - -5
  - -63
  - -50
  - 61
  - 16
  - -0
  - 32
  - 21
  - 60
  - 41
  - 4
  - 30
  - -17
  - -27
  - 47
  - -31
  - -83
  - 63
  - -48
  - -45
  - -14
  - -80
  - -61
  - -23
  - -3
  - 48
  - 1
  - 53
  - -93
  - -24
  - -72
  - 53
  - -46
  - 19
  - 96
  - 57
  - -49
  - -78
  - 32
  - -5
  - -21
  - -30
  - 40
  - -21
  - -16
  - -43
  - 68
  - -55
  - 49
  - -34
  - -19
  - 6
  - 25
  - 2
  - 20
  - -63
  - 26
  - 3
  - -2
  - 25
  - -6
  - -60
  - -17
  - -31
  - 27
  - -10
  - -38
  - 4
  - 44
  - -35
  - 12
  - 31
  - -91
  - 31
  - -34
  - -24
  - -69
  - -22
  - -65
  - -9
  - -28
  - -80
  - -36
  - 42
  - -16
  - 42
  - -21
  - -10
  - -26
  - -101
  - -46
  - -58
  - 7
  - -100
  - -82
  - -24
  - -13
  - -35
  - 58
  - -11
  - -79
  - -81
  - 63
  - -12
  - 17
  - -84
  - 3
  - -22
  - -11
  - 45
  - -20
  - 32
  - 44
  - 21
  - -41
  - 71
  - -68
  - -14
  - -38
  - -81
  - 54
  - 0
  - -54
  - 5
  - 12
  - 27
  - 30
  - 16
  - -15
  - 14
  - 31
  - 59
  - -22
  - 90
  - -45
  - 50
  - 33
  - 52
  - -14
  - 10
  - 88
  - -1
  - 48
  - 43
  - 3
  - -33
  - -27
  - -50
  - 6
  - -1
  - 69
  - -10
  - 47
  - 51
  - -17
  - 44
  - -37
  - 82
  - -30
  - 66
  - -7
  - -32
  - 11
  - -1
  - -25
  - 25
  - -10
  - -72
  - 52
  - 70
  - -8
  - 16
  - -82
  - 40
  - 92
  - 48
  - -72
  - -3
  - -50
  - -23
  - 34
  - -0
  - 17
  - 33
  - 29
  - 8
  - 89
  - 1
  - 27
  - -33
  - 35
  - -51
  - 27
  - 48
  - -38
  - 19
  - -10
  - -40
  - -52
  - -84
  - 27
  - -3
  - 13
  - -62
  - 48
  - -5
  - 56
  - -50
  - 23
  - 47
  - -4
  - 10
  - -16
  - 13
  - 81
  - 26
  - 61
  - 23
  - 73
  - -81
  - 35
  - 32
  - -9
  - -78
  - 6
  - -3
  - -63
  - -31
  - 59
  - -80
  - -4
  - 2
  - 81
  - 2
  - -17
  - -68
  - 62
  - -19
  - 43
  - 83
  - -1
  - -0
  - 54
  - 82
  - 11
  - 13
  - -24
  - -18
  - -5
  - 40
  - 32
  - 5
  - 7
  - -2
  - -43
  - 48
  - 40
  - -45
  - -20
  - -23
  - -45
  - -70
  - -41
  - 20
  - 41
  - 22
  - 9
  - 34
  - 23
  - 29
  - -16
  - 19
  - 14
  - -31
  - 17
  - -54
  - 71
  - -15
  - -52
  - 62
  - 55
  - 59
  - 7
  - 30
  - 55
  - -1
  - -88
  - 87
  - -43
  - 26
  - -10
  - 42
  - -2
  - 63
  - 71
  - -33
  - -29
  - -6
  - -5
  - -27
  - -1
  - 5
  - -56
  - -31
  - 14
  - 22
  - 40
  - 65
  - 31
  - -36
  - 71
  - -11
  - -57
  - 15
  - -61
  - 16
  - 58
  - -15
  - -74
  - -46
  - -12
  - 16
  - -99
  - -11
  - 24
  - 67
  - -69
  - 15
  - 15
  - 47
  - 43
  - 2
  - 60
  - -18
  - 12
  - -12
  - -28
  - 20
  - -9
  - -4
  - -38
  - 11
  - 42
  - 50
  - 50
  - -6
  - 26
  - 45
  - 33
  - 14
  - 51
  - -11
  - 70
  - -11
  - 30
  - 26
  - 39
  - 13
  - -25
  - -27
  - 21
  - -20
  - -21
  - 5
  - 74
  - -8
  - 24
  - 37
  - -15
  - 56
  - -5
  - -94
  - -50
  - -94
  - 25
  - 25
  - -40
  - -53
  - 37
  - -17
  - -61
  - 29
  - -75
  - -98
  - 77
  - 14
  - 7
  - -3
  - -42
  - -26
  - -50
  - -48
  - -51
  - -12
  - -44
  - 1
  - 56
  - 49
  - 21
  - 9
  - 7
  - -38
  - 2
  - 66
  - 64
  - 44
  - -10
  - 13
  - 42
  - -28
  - 95
  - 25
  - -58
  - -80
  - -1
  - -4
  - -52
  - -52
  - -9
  - -48
  - 6
  - 23
  - -19
  - 16
  - 5
  - 50
  - -4
  - 12
  - 66
  - 77
  - -28
  - 14
  - -23
  - -10
  - 45
  - 4
  - 4
  - 7
  - -15
  - -3
  - -27
  - -36
  - -35
  - 10
  - -71
  - 9
  - -7
  - 9
  - -37
  - -26
  - 7
  - -42
  - 77
  - 23
  - 26
  - 2
  - 34
  - -36
  - -38
  - -6
  - 9
  - -4
  - -77
  - 29
  - -48
  - 65
  - 65
  - 70
  - 72
  - -18
  - 12
  - 46
  - -22
  - 42
  - -21
  - 9
  - -73
  - 69
  - -42
  - 49
  - -37
  - 31
  - 76
  - 35
  - 5
  - 11
  - 32
  - -80
  - -13
  - 50
  - 30
  - -50
  - 23
  - 28
  - -79
  - -44
  - 15
  - 14
  - 83
  - 20
  - 10
  - -4
  - 0
  - 32
  - 37
  - -72
  - -22
  - -34
  - 24
  - 71
  - 12
  - -35
  - -21
  - -76
  - 52
  - 31
  - -5
  - -49
  - 42
  - 25
  - -20
  - -63
  - -15
  - 74
  - 69
  - -6
  - 8
  - 4
  - -62
  - -50
  - 36
  - 7
  - 49
  - 80
  - -24
  - 67
  - -47
  - -19
  - -19
  - 34
  - -29
  - 94
  - 13
  - -5
  - -53
  - -39
  - -80
  - -71
  - 40
  - 19
  - 25
  - -8
  - -44
  - -21
  - 46
  - 10
  - -40
  - 18
  - -26
  - -80
  - -0
  - 42
  - -21
  - -44
  - -10
  - -19
  - -61
  - -9
  - 27
  - -27
  - 23
  - 22
  - 54
  - 30
  - 29
  - -17
  - -62
  - -26
  - 81
  - -73
  - 57
  - -85
  - 16
  - 52
  - 74
  - 50
  - 65
  - -5
  - 34
  - 3
  - -60
  - 6
  - -29
  - 45
  - -23
  - -9
  - -24
  - 32
  - 20
  - 94
  - 54
  - -18
  - 20
  - 21
  - -18
  - -98
  - -1
  - 6
  - -8
  - 1
  - -63
  - 44
  - -4
  - -30
  - -66
  - 2
  - -19
  - -38
  - 69
  - -37
  - 13
  - -18
  - 27
  - -9
  - 48
  - 7
  - 0
  - -77
  - -8
  - 17
  - -30
  - 8
  - 76
  - -73
  - -78
  - -63
  - -5
  - 18
  - -92
  - 47
  - -18
  - 9
  - -41
  - 69
  - 45
  - -48
  - 48
  - -4
  - -6
  - 8
  - 61
  - -22
  - -63
  - -1
  - 58
  - 31
  - -68
  - 38
  - 0
  - 26
  - 59
  - -18
  - -5
  - 33
  - 46
  - -5
  - 4
  - 12
  - -54
  - -30
  - -36
  - 20
  - -27
  - 54
  - -8
  - 58
  - -51
  - -4
  - 40
  - -15
  - 23
  - 6
  - -51
  - -17
  - -24
  - -29
  - 3
  - 21
  - -1
  - 46
  - -9
  - 27
  - 51
  - 10
  - 45
  - 24
  - 6
  - 29
  - -49
  - 26
  - 61
  - 29
  - 12
  - -21
  - -61
  - 39
  - -45
  - -39
  - -39
  - -9
  - -23
  - 0
  - 17
  - 32
  - 33
  - -44
  - 26
  - -15
  - -52
  - 68
  - -66
  - 50
  - 19
  - 38
  - -10
  - 7
  - 0
  - 6
  - 12
  - -17
  - 10
  - -55
  - -19
  - -79
  - 17
  - 60
  - -44
  - 30
  - 3
  - -25
  - -20
  - -24
  - -53
  - 48
  - -2
  - -8
  - -52
  - -27
  - 6
  - 16
  - -43
  - -1
  - -19
  - 72
  - -28
  - -46
  - -37
  - -6
  - 5
  - 29
  - 19
  - 27
  - -3
  - -19
  - -19
  - -55
  - 30
  - 1
  - 35
  - 44
  - -23
  - 0
  - -22
  - -29
  - -38
  - 72
  - -10
  - -15
  - 68
  - -50
  - -5
  - -25
  - 29
  - -25
  - 71
  - 41
  - -20
  - -13
  - -16
  - -65
  - 6
  - -27
  - 54
  - 49
  - 94
  - -1
  - 0
  - -10
  - 44
  - 25
  - -15
  - -69
  - -34
  - 27
  - 38
  - -20
  - 5
  - 27
  - 46
  - 39
  - -42
  - -37
  - 8
  - -44
  - 47
  - -48
  - -53
  - 79
  - -66
  - -5
  - -30
  - -4
  - 27
  - -9
  - -80
  - -37
  - 44
  - -2
  - -34
  - -59
  - -4
  - 75
  - -42
  - 2
  - 11
  - -75
  - -13
  - -13
  - 3
  - -8
  - -96
  - -11
  - -82
  - -83
  - 39
  - -0
  - -9
  - -71
  - 81
  - 3
  - -54
  - 33
  - -7
  - -35
  - -81
  - -0
  - -27
  - 46
  - -69
  - 8
  - 34
  - 31
  - 5
  - -24
  - -11
  - -5
  - 40
  - -26
  - -29
  - 32
  - 22
  - 55
  - -40
  - 27
  - -15
  - 12
  - 48
  - 40
  - 42
  - 23
  - -32
  - 4
  - 34
  - 48
  - 11
  - -39
  - 27
  - -55
  - -39
  - -56
  - -41
  - 37
  - 9
  - 85
  - -21
  - 48
  - 39
  - 13
  - -20
  - 18
  - 21
  - 34
  - -2
  - -31
  - 19
  - -58
  - -18
  - -6
  - -11
  - -55
  - 76
  - -5
  - 5
  - -10
  - 89
  - -2
  - -8
  - -23
  - 35
  - -64
  - 60
  - -34
  - -16
  - 5
  - 2
  - 52
  - 12
  - -21
  - 27
  - 80
  - -8
  - -38
  - 17
  - 44
  - 68
  - -5
  - 43
  - -15
  - 91
  - 30

