backends/candle/tests/snapshots/test_flash_pplx1__pplx1_single.snap
---
source: backends/candle/tests/test_flash_pplx1.rs
expression: embeddings_single
---
- - -67
  - -30
  - -0
  - 58
  - -29
  - 85
  - -14
  - 22
  - -77
  - -30
  - 36
  - -77
  - 65
  - -0
  - -30
  - -52
  - -83
  - 29
  - -20
  - -37
  - -76
  - -46
  - -8
  - -8
  - -97
  - -17
  - 59
  - -105
  - -2
  - -70
  - 7
  - 18
  - -97
  - 47
  - -57
  - -0
  - -12
  - 67
  - -15
  - 82
  - 59
  - -27
  - 12
  - -12
  - -51
  - -22
  - 61
  - -21
  - 25
  - -29
  - -66
  - -63
  - -28
  - 57
  - 13
  - 91
  - -34
  - 49
  - -57
  - 25
  - -71
  - -70
  - -82
  - 46
  - -29
  - -2
  - 23
  - -46
  - 69
  - -67
  - 3
  - 78
  - -26
  - -0
  - 56
  - 31
  - -11
  - -39
  - -49
  - 5
  - -11
  - 0
  - -1
  - 52
  - -4
  - -63
  - -50
  - 61
  - 16
  - 0
  - 32
  - 20
  - 60
  - 41
  - 4
  - 29
  - -17
  - -26
  - 47
  - -31
  - -83
  - 61
  - -47
  - -45
  - -14
  - -79
  - -60
  - -23
  - -4
  - 48
  - 1
  - 53
  - -92
  - -23
  - -72
  - 53
  - -45
  - 19
  - 95
  - 57
  - -48
  - -77
  - 33
  - -5
  - -21
  - -30
  - 39
  - -21
  - -16
  - -42
  - 68
  - -54
  - 49
  - -34
  - -19
  - 5
  - 24
  - 3
  - 20
  - -63
  - 26
  - 2
  - -2
  - 25
  - -5
  - -59
  - -18
  - -32
  - 26
  - -11
  - -37
  - 3
  - 43
  - -35
  - 12
  - 31
  - -90
  - 33
  - -34
  - -24
  - -68
  - -21
  - -65
  - -8
  - -27
  - -79
  - -36
  - 42
  - -16
  - 42
  - -21
  - -10
  - -25
  - -101
  - -46
  - -58
  - 7
  - -100
  - -81
  - -24
  - -12
  - -36
  - 59
  - -12
  - -78
  - -81
  - 63
  - -12
  - 18
  - -83
  - 4
  - -22
  - -11
  - 44
  - -20
  - 33
  - 44
  - 21
  - -42
  - 71
  - -67
  - -14
  - -38
  - -81
  - 54
  - 1
  - -55
  - 5
  - 12
  - 27
  - 30
  - 15
  - -15
  - 14
  - 30
  - 58
  - -21
  - 89
  - -44
  - 50
  - 34
  - 52
  - -14
  - 10
  - 87
  - -1
  - 48
  - 42
  - 3
  - -32
  - -27
  - -49
  - 5
  - -1
  - 68
  - -10
  - 47
  - 50
  - -17
  - 44
  - -36
  - 81
  - -30
  - 66
  - -7
  - -31
  - 10
  - -1
  - -25
  - 26
  - -10
  - -72
  - 52
  - 69
  - -9
  - 16
  - -81
  - 40
  - 91
  - 47
  - -72
  - -3
  - -50
  - -22
  - 33
  - 0
  - 17
  - 32
  - 29
  - 7
  - 88
  - -0
  - 26
  - -33
  - 35
  - -50
  - 27
  - 48
  - -38
  - 18
  - -11
  - -41
  - -52
  - -83
  - 27
  - -3
  - 13
  - -62
  - 48
  - -6
  - 56
  - -50
  - 22
  - 47
  - -3
  - 9
  - -16
  - 13
  - 80
  - 27
  - 61
  - 23
  - 72
  - -80
  - 34
  - 33
  - -8
  - -77
  - 6
  - -3
  - -62
  - -30
  - 59
  - -80
  - -4
  - 2
  - 80
  - 2
  - -18
  - -68
  - 62
  - -19
  - 42
  - 82
  - -1
  - 1
  - 54
  - 81
  - 11
  - 13
  - -23
  - -18
  - -5
  - 41
  - 32
  - 5
  - 7
  - -1
  - -42
  - 48
  - 39
  - -44
  - -20
  - -22
  - -44
  - -70
  - -41
  - 20
  - 42
  - 23
  - 8
  - 33
  - 22
  - 29
  - -16
  - 19
  - 14
  - -31
  - 16
  - -54
  - 70
  - -14
  - -51
  - 61
  - 55
  - 58
  - 7
  - 30
  - 54
  - -1
  - -87
  - 87
  - -43
  - 26
  - -9
  - 41
  - -2
  - 62
  - 72
  - -32
  - -29
  - -6
  - -5
  - -27
  - -1
  - 5
  - -56
  - -31
  - 14
  - 22
  - 38
  - 64
  - 31
  - -35
  - 71
  - -11
  - -56
  - 15
  - -60
  - 17
  - 58
  - -14
  - -73
  - -45
  - -12
  - 17
  - -98
  - -10
  - 23
  - 66
  - -68
  - 14
  - 15
  - 46
  - 42
  - 3
  - 60
  - -18
  - 11
  - -12
  - -28
  - 20
  - -9
  - -3
  - -37
  - 11
  - 42
  - 50
  - 50
  - -7
  - 26
  - 44
  - 33
  - 13
  - 50
  - -11
  - 70
  - -12
  - 31
  - 27
  - 39
  - 13
  - -25
  - -27
  - 22
  - -19
  - -21
  - 5
  - 73
  - -8
  - 25
  - 36
  - -15
  - 56
  - -4
  - -94
  - -50
  - -93
  - 25
  - 25
  - -40
  - -52
  - 37
  - -16
  - -60
  - 28
  - -75
  - -98
  - 77
  - 14
  - 8
  - -2
  - -41
  - -26
  - -50
  - -48
  - -51
  - -12
  - -43
  - 1
  - 56
  - 49
  - 22
  - 9
  - 7
  - -37
  - 2
  - 65
  - 63
  - 44
  - -10
  - 13
  - 42
  - -26
  - 95
  - 24
  - -58
  - -79
  - -2
  - -4
  - -52
  - -52
  - -8
  - -47
  - 5
  - 22
  - -19
  - 16
  - 5
  - 50
  - -4
  - 12
  - 66
  - 76
  - -27
  - 14
  - -22
  - -10
  - 44
  - 3
  - 5
  - 7
  - -15
  - -3
  - -27
  - -36
  - -35
  - 10
  - -70
  - 9
  - -7
  - 9
  - -38
  - -26
  - 7
  - -42
  - 77
  - 22
  - 26
  - 1
  - 33
  - -35
  - -37
  - -7
  - 9
  - -4
  - -76
  - 29
  - -48
  - 63
  - 65
  - 68
  - 72
  - -17
  - 12
  - 45
  - -22
  - 41
  - -20
  - 10
  - -72
  - 68
  - -41
  - 49
  - -36
  - 31
  - 75
  - 34
  - 4
  - 11
  - 31
  - -80
  - -14
  - 50
  - 30
  - -49
  - 22
  - 28
  - -78
  - -43
  - 16
  - 14
  - 82
  - 20
  - 10
  - -4
  - 0
  - 31
  - 36
  - -72
  - -22
  - -34
  - 24
  - 71
  - 13
  - -35
  - -21
  - -75
  - 53
  - 30
  - -5
  - -49
  - 42
  - 25
  - -19
  - -62
  - -16
  - 73
  - 68
  - -6
  - 7
  - 4
  - -62
  - -49
  - 36
  - 6
  - 49
  - 79
  - -24
  - 66
  - -47
  - -19
  - -19
  - 34
  - -29
  - 94
  - 12
  - -5
  - -53
  - -39
  - -79
  - -71
  - 40
  - 20
  - 25
  - -8
  - -44
  - -20
  - 45
  - 10
  - -39
  - 18
  - -26
  - -79
  - -1
  - 41
  - -21
  - -43
  - -11
  - -18
  - -61
  - -10
  - 28
  - -27
  - 22
  - 22
  - 53
  - 30
  - 29
  - -16
  - -61
  - -25
  - 80
  - -72
  - 56
  - -84
  - 15
  - 51
  - 74
  - 49
  - 65
  - -5
  - 34
  - 3
  - -59
  - 6
  - -29
  - 45
  - -23
  - -9
  - -25
  - 31
  - 20
  - 93
  - 54
  - -19
  - 20
  - 20
  - -18
  - -98
  - -1
  - 6
  - -7
  - 1
  - -63
  - 43
  - -4
  - -28
  - -65
  - 3
  - -18
  - -38
  - 68
  - -37
  - 13
  - -18
  - 26
  - -10
  - 48
  - 7
  - 1
  - -77
  - -8
  - 18
  - -30
  - 8
  - 76
  - -72
  - -77
  - -62
  - -5
  - 17
  - -91
  - 47
  - -18
  - 9
  - -41
  - 68
  - 45
  - -48
  - 48
  - -5
  - -6
  - 8
  - 61
  - -21
  - -62
  - -1
  - 58
  - 30
  - -67
  - 39
  - 1
  - 25
  - 58
  - -18
  - -4
  - 34
  - 45
  - -5
  - 4
  - 11
  - -54
  - -30
  - -35
  - 20
  - -27
  - 53
  - -8
  - 57
  - -51
  - -3
  - 40
  - -14
  - 24
  - 7
  - -50
  - -17
  - -24
  - -29
  - 3
  - 21
  - -0
  - 47
  - -8
  - 27
  - 51
  - 10
  - 45
  - 23
  - 6
  - 28
  - -48
  - 26
  - 60
  - 28
  - 12
  - -21
  - -61
  - 39
  - -45
  - -39
  - -39
  - -9
  - -23
  - -0
  - 17
  - 32
  - 32
  - -43
  - 26
  - -16
  - -52
  - 67
  - -66
  - 50
  - 18
  - 38
  - -10
  - 8
  - 0
  - 6
  - 12
  - -17
  - 10
  - -55
  - -19
  - -78
  - 17
  - 59
  - -43
  - 30
  - 3
  - -25
  - -20
  - -24
  - -52
  - 48
  - -3
  - -8
  - -52
  - -26
  - 5
  - 15
  - -42
  - -0
  - -19
  - 73
  - -28
  - -45
  - -38
  - -6
  - 5
  - 28
  - 19
  - 26
  - -2
  - -18
  - -19
  - -56
  - 30
  - 1
  - 34
  - 44
  - -22
  - 0
  - -22
  - -28
  - -38
  - 71
  - -9
  - -15
  - 67
  - -50
  - -5
  - -25
  - 30
  - -25
  - 71
  - 41
  - -20
  - -13
  - -16
  - -64
  - 6
  - -27
  - 54
  - 49
  - 93
  - -1
  - 1
  - -9
  - 44
  - 25
  - -14
  - -68
  - -34
  - 26
  - 38
  - -19
  - 6
  - 27
  - 46
  - 38
  - -42
  - -37
  - 7
  - -43
  - 46
  - -48
  - -52
  - 78
  - -65
  - -5
  - -30
  - -4
  - 27
  - -8
  - -79
  - -37
  - 44
  - -1
  - -34
  - -58
  - -4
  - 74
  - -41
  - 2
  - 10
  - -74
  - -12
  - -13
  - 4
  - -8
  - -96
  - -10
  - -81
  - -83
  - 39
  - -0
  - -9
  - -70
  - 79
  - 3
  - -54
  - 33
  - -7
  - -34
  - -80
  - -0
  - -27
  - 46
  - -67
  - 8
  - 34
  - 30
  - 5
  - -24
  - -11
  - -5
  - 40
  - -27
  - -29
  - 32
  - 22
  - 55
  - -40
  - 27
  - -16
  - 12
  - 48
  - 39
  - 42
  - 23
  - -32
  - 4
  - 34
  - 48
  - 12
  - -39
  - 26
  - -54
  - -38
  - -55
  - -41
  - 37
  - 9
  - 84
  - -21
  - 47
  - 38
  - 13
  - -20
  - 18
  - 20
  - 34
  - -2
  - -30
  - 19
  - -58
  - -17
  - -5
  - -12
  - -56
  - 75
  - -4
  - 5
  - -11
  - 88
  - -2
  - -8
  - -23
  - 34
  - -64
  - 60
  - -33
  - -16
  - 4
  - 2
  - 51
  - 12
  - -21
  - 27
  - 79
  - -7
  - -38
  - 17
  - 43
  - 67
  - -4
  - 42
  - -15
  - 90
  - 30

